--- a/client/src/components/ManiImageComponent.css
+++ b/client/src/components/ManiImageComponent.css
@@ -6,8 +6,15 @@
   }
 
   .slider {
-    height:50px; 
-    width:50px; 
+    /* height:50px; 
+    width:50px;  */
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+
+  .Mani:hover, .Spain:hover {
+    background-color: aqua;
   }
   /* use the ImageBox component in your main component or wherever 
   you want to display the image boxes. */
