--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,8 +42,16 @@
 }
 
 .leaflet-container{
-width: 100vw;
-height: 100vh;
+width: 80vw;
+height: 80vh;
 }
+
+.header {
+  background-color: rgb(32, 129, 98);
+  color: white;
+  font-size: 10px;
+}
+
+
 
 
