changing the css layout of the pages to cover almost the entire screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,11 +50,13 @@ width: 80vw;
 height: 80vh;
 }
 
-.header {
+/* .header {
   background-color: rgb(32, 129, 98);
   color: white;
   font-size: 10px;
-}  
+}   */
+
+
 
 
 
