--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -1,14 +1,9 @@
-.full-page {
-  height: 100vh; 
-  width: 90vw; 
-  overflow: hidden; 
-  margin: 0; 
-  padding: 0; 
-}
-
-  .header {
+.container-md {
     background-color: lightblue;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
-  }
+    padding: 5px 10px;
+    top: 20px;
+    left: 19px;
+} 
