--- a/client/src/components/ManiPage.css
+++ b/client/src/components/ManiPage.css
@@ -1,13 +1,11 @@
-
-  .slider {
+.container {
     height: 100vh; 
     width: 90vw; 
     overflow: hidden; 
     margin: 0; 
     padding: 0; 
-  }
+}
 
-  .Mani:hover {
-    background-color: aqua;
-  }
+
+
   
