--- a/client/src/components/TripsComponent.css
+++ b/client/src/components/TripsComponent.css
@@ -1,17 +1,22 @@
-.box {
-    background-color: lightblue;
-    border: 1px solid blue;
-    min-height: 50px;
-    font-size: 2rem;
+.figure-img { 
+    width: 90%; 
+    height: 100vh;
+    position: relative;
+    margin: 0;
 }
 
-.align-items {
-    align-items: flex-end;
-}
 
-.specialHeader {
+.header {
     background-color: lightblue;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
 }
+
+.container {
+    height: 100vh; 
+    width: 90vw; 
+    overflow: hidden; 
+    margin: 0; 
+    padding: 0; 
+} 
