--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -1,9 +1,20 @@
-.container-md {
+ contact-container .container {
     background-color: lightblue;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
-    padding: 5px 10px;
-    top: 20px;
-    left: 19px;
-} 
+    width: 50%;
+    padding: 10px; 
+     
+}   
+
+.send-button{
+    background-color: lightblue;
+    font-style: oblique;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+}
+
+
+ 
+
