--- a/client/src/components/TripsComponent.css
+++ b/client/src/components/TripsComponent.css
@@ -1,10 +1,10 @@
-.figure-img { 
+ .figure-img { 
     width: 90%; 
     height: 100vh;
     position: relative;
     margin: 0;
 }
-
+ 
 
 .header {
     background-color: lightblue;
@@ -12,11 +12,12 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
 }
-
-.container {
+ 
+.TripsComponent-container .container {
     height: 100vh; 
-    width: 90vw; 
+    width: 100vw; 
     overflow: hidden; 
     margin: 0; 
     padding: 0; 
-} 
+}  
+
