--- a/client/src/components/TripOnClick.css
+++ b/client/src/components/TripOnClick.css
@@ -6,9 +6,25 @@
   padding: 0; 
 }
 
-  .header {
-    background-color: lightblue;
+/* .header{
+  border: 4px red;
+} */
+  .h1 {
+    background-color: white;
+    padding: 10px;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
+    border-radius: 30px; 
   }
+
+  .click-word{
+    background-color: lightblue;
+    font-style: oblique;
+    font-weight: bold; /* Increase the thickness of the text */
+    font-family: Arial, sans-serif;
+    color: green;
+    border-radius: 30px;
+  }
+
+
