commit TripParameters component with parameters rooms, adults, check in and check out

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,7 @@ color: white;
 }
 
 .navbar-brand {
-  background-color: red;
+  background-color: orange;
   font-size: large; 
   color: white;
   border-radius: 30px; 
