--- a/client/src/components/TripOnClick.css
+++ b/client/src/components/TripOnClick.css
@@ -15,20 +15,19 @@
 }
 
   .h1 {
-    background-color: white;
+    background-color: lightblue;
     padding: 10px;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: black;
-    /* border-radius: 30px; */ 
   }
 
   .click-word{
     background-color: lightblue;
     font-style: oblique;
-    font-weight: bold; /* Increase the thickness of the text */
+    font-weight: bold; 
     font-family: Arial, sans-serif;
-    color: green;
+    color: orange;
     border-radius: 30px;
   }
 
