--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
 .container-fluid {
 background-color: lightblue;
 color: white;
-/* border-radius: 25px; */
+border-radius: 25px;
 }
 
 .navbar-brand {
