--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -13,11 +13,11 @@
     color: black;
 }
  
-.TripsComponent-container .container {
+/* .TripsComponent-container .container {
     height: 100vh; 
     width: 100vw; 
     overflow: hidden; 
     margin: 0; 
     padding: 0; 
-}  
+}   */
 
