changing the color palette to 8ea5eb and 2eb872

--- a/client/styles/TripOnClick.css
+++ b/client/styles/TripOnClick.css
@@ -27,7 +27,7 @@
 } */
 
   .h1 {
-    background-color: lightblue;
+    background-color: #8ea5eb;
     padding: 7px;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
