--- a/client/styles/TripOnClick.css
+++ b/client/styles/TripOnClick.css
@@ -31,7 +31,7 @@
     padding: 7px;
     font-style: oblique;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: black;
+    color: white;
     border-radius: 30px;
     position: relative;
     margin-right: 30px;
