moving the states for the parameters component UP to the TripOnClick component, and then passign as props the states to the TripParameters

--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -22,11 +22,11 @@
 }   */
 
 .btn.btn-outline-success.btn-lg {
-    background-color: orange;
+    background-color: lightblue;
     color: white; /* Optional: Change text color to contrast */
   }
   
   .btn.btn-outline-success.btn-lg:hover {
-    background-color: #8ea5eb; /* Optional: Change color on hover */
+    background-color: orange; /* Optional: Change color on hover */
   }
 
