--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,39 +31,31 @@ border-radius: 25px;
 }
 
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
-}
+
+
 
 .leaflet-container{
 width: 80vw;
 height: 80vh;
 }
 
-/* .header {
-  background-color: rgb(32, 129, 98);
-  color: white;
-  font-size: 10px;
-}   */
+
 
 
 
