adding a form element in the TripOnClick component

--- a/client/styles/TripOnClick.css
+++ b/client/styles/TripOnClick.css
@@ -79,5 +79,12 @@
 
 
 .road-trip-button {
-  background-color: orange;  
+  background-color: lightblue;  
+  border-radius: 30px;
+}
+
+.clicks {
+  background-color: orange;
+  border-radius: 30px;
+
 }
