--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -1,3 +1,24 @@
+.full-page {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .split-screen {
+    display: flex;
+    height: calc(100% - 4rem); /* Adjust for header height */
+  }
+}
+
+.left-panel {
+  flex: 1;
+}
+
+.right-panel {
+  flex: 1;
+  margin-top: 50px;
+  margin-left: 30px;;
+}
+
  .figure-img { 
     width: 90%; 
     height: 100vh;
