passign the props to all the components of the routes in the App

--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -51,3 +51,8 @@
     background-color: orange; /* Optional: Change color on hover */
   }
 
+  .clickit {
+    background-color: orange; 
+    color: black;
+    border-radius: 40px; 
+  }
