--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,9 @@ border-radius: 25px;
   background-color: orange;
   color: black;
   border-radius: 40px; 
-  font-family: Georgia, serif;
+  font-family: "GFS Neohellenic", sans-serif;
+  font-weight: 700;
+  font-style: normal;
   font-size: 40px;
 }
 
