--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,66 +1,67 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    
+    text-align: center;
+    }
+  
+   /* 
+  .nav-link {
+    font-weight: bold; 
+    font-family: Arial, sans-serif;
+    color: black;
   }
-
- 
-.nav-link {
-  font-weight: bold; 
-  font-family: Arial, sans-serif;
-  color: black;
-}
-
-.nav-link:hover {
-  color: /* #8ea5eb */orange;
-}
-
-.container-fluid {
-background-color: /* #8ea5eb */ lightblue;
-color: grey;
-border-radius: 25px;
-}
-
-.navbar-brand {
-  background-color: orange;
-  color: black;
-  border-radius: 40px; 
-  font-family: "GFS Neohellenic", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 40px;
-}
-
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .nav-link:hover {
+    color: #8ea5eb ;
+  } */
+  
+  .container-fluid {
+  background-color: /* #8ea5eb */ lightblue;
+  color: grey;
+  /* border-radius: 25px; */
   }
-  to {
-    transform: rotate(360deg);
+  
+  .navbar-brand {
+    background-color: orange;
+    color: black;
+    border-radius: 40px; 
+    font-family: "GFS Neohellenic", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 40px;
   }
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  
+  /* @keyframes logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  } */
+  
+  /* @media (prefers-reduced-motion: no-preference) {
+    a:nth-of-type(2) .logo {
+      animation: logo-spin infinite 20s linear;
+    }
+  } */
+  
+  
+  
+  
+  
+  .leaflet-container{
+  width: 80vw;
+  height: 80vh;
   }
-} */
-
-
-
-
-
-.leaflet-container{
-width: 80vw;
-height: 80vh;
-}
-
-
-
-
-
-
-
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
