--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -34,8 +34,18 @@
   }
 
   .road-trip-button {
-    background-color: lightblue;  
-    border-radius: 10px;
+   /*  background-color: lightblue;  
+    border-radius: 10px; */
+      background-color: lightblue;
+      font-family: "GFS Neohellenic", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 40px;
+      background-color: orange; 
+      color: black;
+      border-radius: 40px; 
+      /* -webkit-text-stroke-width: 2px; */ /* Width of the border */
+    /* -webkit-text-stroke-color: black; */
   }
 
  .parameter_inputs{
