--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,10 @@
 #root {
     max-width: 1280px;
     margin: 0 auto;
-    
     text-align: center;
     }
   
-   /* 
+    
   .nav-link {
     font-weight: bold; 
     font-family: Arial, sans-serif;
@@ -14,12 +13,11 @@
   
   .nav-link:hover {
     color: #8ea5eb ;
-  } */
+  } 
   
   .container-fluid {
-  background-color: /* #8ea5eb */ lightblue;
-  color: grey;
-  /* border-radius: 25px; */
+  background-color: lightblue;
+  justify-content: center;
   }
   
   .navbar-brand {
