applying tailwind style to the parameters buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,9 +16,13 @@
   } 
   
   .container-fluid {
-  background-color: lightblue;
-  justify-content: center;
-  }
+      background: linear-gradient(to right, #3ca2c3,
+      #63b5cf,
+      #add8e6,
+      #b1dae7,
+      #d8ecf3);
+    }
+  
   
   .navbar-brand {
     background-color: orange;
