--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,14 +25,18 @@
   
   
   .navbar-brand {
-    background-color: orange;
+    /* background-color: orange; */
     color: black;
     border-radius: 40px; 
-    font-family: "GFS Neohellenic", sans-serif;
+    /* font-family: "GFS Neohellenic", sans-serif;
     font-weight: 700;
+    font-style: normal; */
+    font-family: "Bungee Spice", sans-serif;
+    font-weight: 400;
     font-style: normal;
     font-size: 40px;
   }
+  
   
   
   /* @keyframes logo-spin {
