deleting tailwind from html

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,33 @@
-/* #root {
+#root {
     max-width: 1280px;
     margin: 0 auto;
     text-align: center;
-    } */
-  
-  
-  /* .nav-link {
-    font-weight: bold; 
+
+    .nav-link {
+      color: black;
+      font-weight: bold; 
     font-family: Arial, sans-serif;
-    color: black;
-  }  */
+    }
+}
   
- /*   .nav-link:hover {
+ 
+  
+ .nav-link:hover {
     color: #8ea5eb ;
-  }   */
+  }   
   
-  /* .container-fluid {
-      background: linear-gradient(to right, #3ca2c3,
+  .container-fluid {
+      /* background: linear-gradient(to right, #3ca2c3,
       #63b5cf,
       #add8e6,
       #b1dae7,
-      #d8ecf3);
-    } */
+      #d8ecf3); */
+        color:lightsteelblue
+    } 
   
   
   .navbar-brand {
-    background-color: orange;
+    background-color: #fda403;
     color: black; 
     /* border-radius: 40px; */ 
       font-family: "GFS Didot", serif;
