--- a/client/styles/TripOnClick.css
+++ b/client/styles/TripOnClick.css
@@ -45,7 +45,7 @@
   .h1 {
     padding: 7px;
     font-style: oblique; 
-    font-family: "GFS Neohellenic", sans-serif;
+    font-family: "GFS Didot", serif;
     font-weight: 500;
     /* font-style: normal; */
     font-size: 40px;
