--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -1,4 +1,4 @@
-.parameters-container {
+/* .parameters-container {
    
     position: relative;
 
@@ -14,41 +14,40 @@
     position: relative;
     top:30%;
 }
-
+ */
 .submit-wrapper {
-    position: relative;
-    transition-property: background-color, color;
-    transition-duration: 0.4s;
-    top:30%;
-  }
-  
-  .submit-wrapper:hover {
-    background-color: orange !important; 
-    color: white !important;
-  }
+  position: relative;
+  transition-property: background-color, color;
+  transition-duration: 0.4s;
+  top: 30%;
+}
 
-  .clicks {
-    background-color: orange;
-    border-radius: 10px;
-    font-size:x-large;
-  }
+.submit-wrapper:hover {
+  background-color: orange !important;
+  color: white !important;
+}
 
-  .road-trip-button {
-   /*  background-color: lightblue;  
-    border-radius: 10px; */
-      background-color: lightblue;
-      font-family: "GFS Neohellenic", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 40px;
-      background-color: orange; 
-      color: black;
-      border-radius: 40px; 
-      /* -webkit-text-stroke-width: 2px; */ /* Width of the border */
-    /* -webkit-text-stroke-color: black; */
-  }
-
- .parameter_inputs{
-
+.clicks {
+  background-color: orange;
   border-radius: 10px;
- }
+  font-size: x-large;
+}
+
+.road-trip-button {
+  /*  background-color: lightblue;  
+    border-radius: 10px; */
+  background-color: lightblue;
+  font-family: "GFS Neohellenic", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 40px;
+  background-color: orange;
+  color: black;
+  border-radius: 40px;
+  /* -webkit-text-stroke-width: 2px; */ /* Width of the border */
+  /* -webkit-text-stroke-color: black; */
+}
+
+.parameter_inputs {
+  border-radius: 10px;
+}
