--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,15 +45,13 @@
   font-size: 40px;
 }
 
-.h1 {
+.title-h1 {
   padding: 7px;
-  font-style: oblique;
   font-family: "GFS Didot", serif;
-  font-weight: 500;
-  font-size: 40px;
+  font-weight: 1000;
+  font-size: 2.5rem;
   color: black;
-  position: relative;
-  margin-right: 30px;
+  text-align: center;
 }
 
 .wrapper {
