--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -6,7 +6,6 @@
   /* .split-screen {
     display: flex;
     height: calc(100% - 4rem);} */ /* Adjust for header height */
-  
 }
 
 /* .left-panel {
@@ -19,40 +18,39 @@
   margin-left: 30px;;
 } */
 
- .figure-img { 
-    width: 90%; 
-    height: 100vh;
-    position: relative;
-    margin: 0;
+.figure-img {
+  width: 90%;
+  height: 100vh;
+  position: relative;
+  margin: 0;
 }
- 
 
 .header {
-    background-color: lightblue;
-    font-style: oblique;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: black;
+  background-color: #b9d9eb;
+  font-style: oblique;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: black;
 }
- 
- .TripsComponent-container .container {
-    height: 100vh; 
-    width: 100vw; 
-    overflow: hidden; 
-    margin: 0; 
-    padding: 0; 
-}   
+
+.TripsComponent-container .container {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
 
 .btn.btn-outline-success.btn-lg {
-    background-color: lightblue;
-    color: white; /* Optional: Change text color to contrast */
-  }
-  
-  .btn.btn-outline-success.btn-lg:hover {
-    background-color: orange; /* Optional: Change color on hover */
-  }
+  background-color: #b9d9eb;
+  color: white; /* Optional: Change text color to contrast */
+}
 
-  .clickit {
-    background-color: orange; 
-    color: black;
-    border-radius: 40px; 
-  }
+.btn.btn-outline-success.btn-lg:hover {
+  background-color: orange; /* Optional: Change color on hover */
+}
+
+.clickit {
+  background-color: orange;
+  color: black;
+  border-radius: 40px;
+}
