--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -15,17 +15,17 @@
     top:30%;
 }
  */
-.submit-wrapper {
+/* .submit-wrapper {
   position: relative;
   transition-property: background-color, color;
   transition-duration: 0.4s;
   top: 30%;
-}
+} */
 
-.submit-wrapper:hover {
+/* .submit-wrapper:hover {
   background-color: orange !important;
   color: white !important;
-}
+} */
 
 .clicks {
   background-color: orange;
@@ -41,6 +41,15 @@
   color: black;
   border-radius: 20px;
   padding: 10px 20px;
+}
+
+.wrapper {
+  position: relative;
+  top: 10%;
+  background-color: #b9d9eb;
+  /*  background-color: #eefbee; */
+  padding: 27px;
+  border-radius: 5px;
 }
 
 .parameter_inputs {
