styling btn-outline-success

--- a/client/styles/TripsComponent.css
+++ b/client/styles/TripsComponent.css
@@ -1,12 +1,11 @@
-.full-page {
+/* .full-page {
   display: flex;
   flex-direction: column;
   height: 100vh;
-
-  /* .split-screen {
+} */
+/* .split-screen {
     display: flex;
     height: calc(100% - 4rem);} */ /* Adjust for header height */
-}
 
 /* .left-panel {
   flex: 1;
@@ -26,7 +25,7 @@
 }
 
 .header {
-  background-color: #b9d9eb;
+  /* background-color: #b9d9eb; */
   font-style: oblique;
   font-family: Georgia, "Times New Roman", Times, serif;
   color: black;
@@ -42,11 +41,15 @@
 
 .btn.btn-outline-success.btn-lg {
   background-color: #b9d9eb;
-  color: white; /* Optional: Change text color to contrast */
+  color: black; /* Optional: Change text color to contrast */
+  font-size: larger;
+  border-color: orange;
+  border-width: 2px;
 }
 
 .btn.btn-outline-success.btn-lg:hover {
   background-color: orange; /* Optional: Change color on hover */
+  color: white;
 }
 
 .clickit {
