--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -34,11 +34,11 @@
 }
 
 .road-trip-button {
-  font-family: "GFS Didot", serif;
+  font-family: "Bebas Neue", serif;
   font-weight: 200;
   font-size: 30px;
   background-color: orange;
-  color: black;
+  color: #2c3e50;
   border-radius: 20px;
   padding: 10px 20px;
 }
@@ -48,6 +48,8 @@
   top: 10%;
   background-color: #b9d9eb;
   /*  background-color: #eefbee; */
+  /* background-color: #2c3e50; */
+
   padding: 27px;
   border-radius: 5px;
 }
