--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,18 +41,20 @@
   border: 3px solid #2c3e50;
   border-radius: 10px;
   font-family: "Bebas Neue", serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 3rem;
+  font-weight: 700;
+  font-size: 50px;
+  letter-spacing: 0.02857em;
 }
 .accent {
   color: #b9d9eb; /* light blue accent */
 }
 .title-h1 {
-  padding: 7px;
+  padding: 10px;
+  letter-spacing: 0.02857em;
   font-family: "Bebas Neue", serif;
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: #2c3e50;
   text-align: center;
+  margin-top: 20px;
 }
