--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -35,24 +35,30 @@
 
 .road-trip-button {
   font-family: "Bebas Neue", serif;
-  font-weight: 600;
+  font-weight: 200;
   font-size: 30px;
   background-color: orange;
   color: #2c3e50;
   border-radius: 20px;
   padding: 10px 20px;
+  margin-top: 20px;
+  letter-spacing: 0.02857em;
 }
-
+.road-trip-button:hover {
+  background-color: #b9d9eb;
+  transform: scale(1.05);
+}
 .wrapper {
   position: relative;
   top: 10%;
   background-color: #b9d9eb;
-  background-color: #eefbee;
+
   /*  background-color: #eefbee; */
   /* background-color: #2c3e50; */
 
   padding: 27px;
   border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .parameter_inputs {
