--- a/client/styles/TripParametersComponent.css
+++ b/client/styles/TripParametersComponent.css
@@ -37,7 +37,7 @@
   font-family: "Bebas Neue", serif;
   font-weight: 200;
   font-size: 30px;
-  background-color: orange;
+  /*  background-color: orange; */
   color: #2c3e50;
   border-radius: 20px;
   padding: 10px 20px;
@@ -51,7 +51,7 @@
 .wrapper {
   position: relative;
   top: 10%;
-  background-color: #b9d9eb;
+  background-color: #42abae;
 
   /*  background-color: #eefbee; */
   /* background-color: #2c3e50; */
